--- a/06_dom/two.html
+++ b/06_dom/two.html
@@ -17,7 +17,7 @@
 </body>
 <script>
     const parent = document.querySelector('.parent')
-    // console.log(parent);
+     console.log(parent);
     // console.log(parent.children);
     // console.log(parent.children[1].innerHTML);
 
